--- a/2_environ_NMDS.Rmd
+++ b/2_environ_NMDS.Rmd
@@ -181,6 +181,7 @@ table_plant <- means %>%
 
 table_plant
 
+
 ```
 
 ### Hierarchical Agglomerative Clustering
@@ -215,24 +216,24 @@ ac <- function(x) {
   agnes(d, method = x, diss = TRUE, par.method = -0.25)$ac}
 
 # Best method?
-map_dbl(m, ac)
+map_dbl(m, ac) # <-  gaverage is best
 
 
 #########################
 #### Find optimal number of clusters
 
 # Scree plot  
-fviz_nbclust(df, FUN = hcut, diss = d, method = "wss") # 2, 3, or 4 groups
+fviz_nbclust(df, FUN = hcut, diss = d, method = "wss") # 3 groups is best
 
 # Average Silhouette
 # Measures how similar an object is to its own cluster (cohesion) compared to other clusters (separation). The Average Silhouette Width is the mean of all silhouette scores within a cluster or across all clusters.
 # S ≈ 1: The point is well clustered
-fviz_nbclust(df, FUN = hcut, diss = d, method = "silhouette") # 2 groups
+fviz_nbclust(df, FUN = hcut, diss = d, method = "silhouette") # 2 or 3 groups
 
 # Gap Stat
 # Compares the total within-cluster variation for different numbers of clusters with their expected values under a null reference distribution of the data (i.e., uniformly distributed points).
 # The optimal number of clusters is the smallest k such that the Gap Statistic is maximized or the first local maximum occurs, indicating that adding more clusters does not significantly improve the clustering.
-fviz_nbclust(df, FUN = hcut, diss = d, method = "gap_stat") # 9 groups, there's also a break at 3 groups
+fviz_nbclust(df, FUN = hcut, diss = d, method = "gap_stat") # 3 groups is best
 
 # Above tests suggest at least two, but are also not conclusive...
 
@@ -261,7 +262,7 @@ mantel_results <- compute_mantel_correlation(Hclust.result, d)
 
 # Find the optimal number of clusters based on the largest Mantel correlation, r
 optimal_clusters <- which.max(mantel_results) + 1  # Add 1 to convert index to number of clusters
-print(paste("Optimal Number of Clusters:", optimal_clusters)) # 3 groups
+print(paste("Optimal Number of Clusters:", optimal_clusters)) # <-- 3 groups
 
 
 ######## Use ISA to determine optimal clusters
@@ -434,33 +435,32 @@ results
 
 ```{r nmds by species percent cover, include = FALSE}
           
-# the AUTOTRANSFORM = F skips the automatic data transformations and uses the input data as is
-# - when the raw data contains the information you need (e.g., abundance)
-# - when you have a small number of samples or small number of variables
-# - when you want to preserve the original scale of the data (e.g., interested in the absolute differences betwen two sets of measurements)
+### the AUTOTRANSFORM = F skips the automatic data transformations and uses the input data as is
+### - when the raw data contains the information you need (e.g., abundance)
+### - when you have a small number of samples or small number of variables
+### - when you want to preserve the original scale of the data (e.g., interested in the absolute differences betwen two sets of measurements)
 
-mds <- metaMDS(df, 
-                       autotransform = TRUE, # FALSE or TRUE
-                       distance = "bray",   # bray or "raup" - Bray is the best for community data
-                      k = 3, #dimentions
-                      trymax = 400) # this is more appropriate for my data
+# mds <- metaMDS(df, 
+                      #  autotransform = TRUE, # FALSE or TRUE
+                      #  distance = "bray",   # bray or "raup" - Bray is the best for community data
+                      # k = 3, #dimentions
+                      # trymax = 400) # this is more appropriate for my data
 
-mds$stress
-# k = 2D: stress test = 0.06422607
-# k = 3D: stress test = 0.04510397
-# k = 4D: stress test = 0.03603733
+# mds$stress
+### k = 2D: stress test = 0.06422607
+### k = 3D: stress test = 0.04510397
+### k = 4D: stress test = 0.03603733
 
 
-stressplot(mds) # A Shepard plot compares the observed dissimilarities (distances in the original data) to the fitted distances (distances in the reduced NMDS space).
-gof <- goodness(mds) # Higher values indicate points that are poorly represented in the reduced-dimensional space, contributing more to the stress
-gof
-# min(gof) = 0.004822674
-# max(gof) = 0.011505323 
+### stressplot(mds) # A Shepard plot compares the observed dissimilarities (distances in the original data) to the fitted distances (distances in the reduced NMDS space).
+# gof <- goodness(mds) # Higher values indicate points that are poorly represented in the reduced-dimensional space, contributing more to the stress
+### min(gof) = 0.004822674
+### max(gof) = 0.011505323
 
-plot(mds, display = "sites", type = "none")
-points(mds, display = "sites", cex = 2* # 2x for visibility
-         gof/mean(gof)) # standardized by the mean
-# larger points = less well represented
+# plot(mds, display = "sites", type = "none")
+# points(mds, display = "sites", cex = 2* # 2x for visibility
+         # gof/mean(gof)) # standardized by the mean
+### larger points = less well represented
 
 ```
 
@@ -470,17 +470,17 @@ points(mds, display = "sites", cex = 2* # 2x for visibility
 
 ######## don't run becuase ENVIRON variables are of different units. Run PCA instead.
 
-
-mds.df <- vegan::scores(mds, display = "sites") %>% 
-  as.data.frame() %>% 
-  rownames_to_column("site_rep") %>% 
-  full_join(extracted %>% dplyr::select("site_rep", "plant_cluster"), by = "site_rep") %>% 
-    mutate(plant_cluster = as.character(plant_cluster)) %>% 
-  rownames_to_column() %>% 
-  full_join(my_groups, by = "rowname") %>% 
-  rename(environ_cluster = sub_grp) %>% 
-     mutate(environ_cluster = as.character(environ_cluster)) %>% 
-  dplyr::select(-rowname)
+ 
+# mds.df <- vegan::scores(mds, display = "sites") %>% 
+#   as.data.frame() %>% 
+#   rownames_to_column("site_rep") %>% 
+#   full_join(extracted %>% dplyr::select("site_rep", "plant_cluster"), by = "site_rep") %>% 
+#     mutate(plant_cluster = as.character(plant_cluster)) %>% 
+#   rownames_to_column() %>% 
+#   full_join(my_groups, by = "rowname") %>% 
+#   rename(environ_cluster = sub_grp) %>% 
+#      mutate(environ_cluster = as.character(environ_cluster)) %>% 
+#   dplyr::select(-rowname)
 
 # uses the RAUP-CRICK dissimilarity index to calculate pairwise dissimilarities
 # - adjusts for spp richness
@@ -490,34 +490,34 @@ mds.df <- vegan::scores(mds, display = "sites") %>%
 # abcover_byspecies_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, distance = "raup") 
 
 
-ggplot(mds.df,
-       aes(x = NMDS1,
-           y = NMDS2,
-           color = environ_cluster, 
-           shape = environ_cluster)) +
-  geom_point(size = 3, alpha = 0.8) +
-  stat_ellipse() + 
-  theme(axis.title = element_text(size = 20)) +
-  theme(axis.text = element_text(size = 16))
+# ggplot(mds.df,
+#        aes(x = NMDS1,
+#            y = NMDS2,
+#            color = environ_cluster, 
+#            shape = environ_cluster)) +
+#   geom_point(size = 3, alpha = 0.8) +
+#   stat_ellipse() + 
+#   theme(axis.title = element_text(size = 20)) +
+#   theme(axis.text = element_text(size = 16))
 
 
-ggplot(mds.df,
-       aes(x = NMDS2,
-           y = NMDS3,
-           color = environ_cluster,
-           shape = environ_cluster)) +
-  geom_point(size = 3, alpha = 0.8) +
-  stat_ellipse() + 
-  theme(axis.title = element_text(size = 20)) +
-  theme(axis.text = element_text(size = 16))
+# ggplot(mds.df,
+#        aes(x = NMDS2,
+#            y = NMDS3,
+#            color = environ_cluster,
+#            shape = environ_cluster)) +
+#   geom_point(size = 3, alpha = 0.8) +
+#   stat_ellipse() + 
+#   theme(axis.title = element_text(size = 20)) +
+#   theme(axis.text = element_text(size = 16))
 
 
-p <- plot_ly(mds.df,
-        x = ~NMDS1,
-        y = ~NMDS2,
-        z = ~NMDS3,
-        type =  "scatter3d",
-        color=mds.df$envion_cluster)
+# p <- plot_ly(mds.df,
+#         x = ~NMDS1,
+#         y = ~NMDS2,
+#         z = ~NMDS3,
+#         type =  "scatter3d",
+#         color=mds.df$envion_cluster)
 # p
 
 ```
@@ -564,13 +564,7 @@ pca_scores <- pca_result$x  # These are the scores (transformed data)
 
 # View PCA results
 summary(pca_result)
-# Importance of components: SUMMER, WINTER, EQUINOX
-#                           PC1    PC2    PC3    PC4     PC5     PC6     PC7
-# Standard deviation     1.5361 1.3759 1.0256 0.8627 0.70418 0.67483 0.00746
-# Proportion of Variance 0.3371 0.2705 0.1502 0.1063 0.07084 0.06506 0.00001
-# Cumulative Proportion  0.3371 0.6075 0.7578 0.8641 0.93494 0.99999 1.00000
-
-# Importance of components: TOTAL SOLAR RADIATION
+# Importance of components: 
 #                           PC1    PC2    PC3    PC4     PC5
 # Standard deviation     1.4238 1.0116 0.9723 0.7316 0.68461
 # Proportion of Variance 0.4054 0.2047 0.1891 0.1071 0.09374
@@ -594,53 +588,34 @@ pca_df <- pca_values %>%
   dplyr::select(-rowname)
 
 
-PCA_plot <- ggplot() +
-  geom_point (data = pca_df,
-              aes(x = PC1, y = PC2, color = environ_cluster, shape = plant_cluster), 
-              size = 4) +  
-  scale_color_manual(values = c("1" = "orange", "2" = "cyan", "3" = "darkgreen")) +
-  
-  scale_shape_manual(values = c("1" = 1, "2" = 2, "3" = 3, "4" = 22, "5" = 7),
-                     labels = c("1" = "NNG", "2" = "ssF", "3" = "ssG", "4" = "ssFG", "5" = "EVG")) +
-  
-  geom_vline(xintercept = c(0), color = "grey70", linetype = 2) + 
-  geom_hline(yintercept = c(0), color = "grey70", linetype = 2) +
-  geom_segment(data = loadings_df, 
-               aes(x = 0, y = 0, xend = PC1, yend = PC2),  # Vectors for loadings
-               arrow = arrow(length = unit(0.2, "cm")), 
-               color = "black", alpha = 0.8) +             # Vectors in blue, alpha = transparency (0 = transparent, 1 = solid)
-  geom_text_repel(data = loadings_df,                    # Text labels for loadings
-                  aes(x = PC1, y = PC2, label = rownames(loadings_df)),
-                  size = 4, color = "blue") +             # Text labels in blue
-  labs(title = "PCA of Environmental Variables", 
-       x = "Principal Component 1 (40.54%)",
-       y = "Principal Component 2 (20.47%)") +                  
-  #clean_background +      
-  theme_bw()+
-  theme(plot.title = element_text(hjust = 0.5)) +         # Center title
-  xlim(-4, 4) +
-  ylim(-5, 4)
-
-
 PCA_environcluster <- ggplot() +
   geom_point (data = pca_df,
-              aes(x = PC1, y = PC2, color = environ_cluster, shape = environ_cluster), 
+              aes(x = PC1, 
+                  y = PC2, 
+                  color = environ_cluster, 
+                  shape = environ_cluster), 
               size = 4) +  
   scale_color_manual(values = c("1" = "gold", "2" = "green", "3" = "darkgreen")) +
-  #scale_shape_manual(values = c("1" = 0, "2" = 4, "3" = 2, "4" = 3, "5" = 7)) +
   geom_vline(xintercept = c(0), color = "grey70", linetype = 2) + 
   geom_hline(yintercept = c(0), color = "grey70", linetype = 2) +
-  geom_segment(data = loadings_df, 
-               aes(x = 0, y = 0, xend = PC1, yend = PC2),  # Vectors for loadings
+  
+  geom_segment(data = loadings_df, # <- vectors
+               aes(x = 0,
+                   y = 0, 
+                   xend = PC1, 
+                   yend = PC2),  
                arrow = arrow(length = unit(0.2, "cm")), 
-               color = "black", alpha = 0.8) +             # Vectors in blue, alpha = transparency (0 = transparent, 1 = solid)
-  geom_text_repel(data = loadings_df,                    # Text labels for loadings
-                  aes(x = PC1, y = PC2, label = rownames(loadings_df)),
+               color = "black", alpha = 0.8) +  # alpha = transparency (0 = transparent, 1 = solid)
+  
+  geom_text_repel(data = loadings_df,  # vector text                 
+                  aes(x = PC1, 
+                      y = PC2, 
+                      label = rownames(loadings_df)),
                   size = 4, color = "blue") +             # Text labels in blue
+  
  labs(title = "PCA of Environmental Variables", 
        x = "Principal Component 1 (40.54%)",
        y = "Principal Component 2 (20.47%)") +                  
-  #clean_background +      
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5)) +         # Center title
   xlim(-4, 4) +
@@ -683,12 +658,45 @@ PCA_plantcluster <- ggplot() +
          shape = guide_legend(title = "Plant Group"),
          fill = guide_legend(title = "Plant Group"))
 
-PCA_plot
+
+
+PCA_plot <- ggplot() +
+  geom_point (data = pca_df,
+              aes(x = PC1, 
+                  y = PC2, 
+                  color = environ_cluster, 
+                  shape = plant_cluster), 
+              size = 4) +  
+  scale_color_manual(values = c("1" = "orange", "2" = "cyan", "3" = "darkgreen")) +
+  
+  scale_shape_manual(values = c("1" = 1, "2" = 2, "3" = 3, "4" = 22, "5" = 7),
+                     labels = c("1" = "NNG", "2" = "ssF", "3" = "ssG", "4" = "ssFG", "5" = "EVG")) +
+  
+  geom_vline(xintercept = c(0), color = "grey70", linetype = 2) + 
+  geom_hline(yintercept = c(0), color = "grey70", linetype = 2) +
+  geom_segment(data = loadings_df, 
+               aes(x = 0, y = 0, xend = PC1, yend = PC2),  # Vectors for loadings
+               arrow = arrow(length = unit(0.2, "cm")), 
+               color = "black", alpha = 0.8) +             # Vectors in blue, alpha = transparency (0 = transparent, 1 = solid)
+  geom_text_repel(data = loadings_df,                    # Text labels for loadings
+                  aes(x = PC1, y = PC2, label = rownames(loadings_df)),
+                  size = 4, color = "blue") +             # Text labels in blue
+  labs(title = "PCA of Environmental Variables", 
+       x = "Principal Component 1 (40.54%)",
+       y = "Principal Component 2 (20.47%)") +                  
+  #clean_background +      
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5)) +         # Center title
+  xlim(-4, 4) +
+  ylim(-5, 4)
+
+
 
 PCA_environcluster
 
 PCA_plantcluster
 
+PCA_plot
 
 ```
 
@@ -948,64 +956,42 @@ table_plant_statsmeans
 
 ```{r}
 
-######### take home
-# Group 1 is at lower elevation, more shady, more negative TWI, higher lat, less negative long, one fire. 14 or 14 transects burned in 2007. The three transects that burned in 2003 and 2007 were INT 1, INT2, and 1.10. === GROUP 1 includes transects from Site 1 and INT 1, 3. (n = 14 transects)
 
 length(
   boxdf %>%  
-    filter(environ_cluster == "1") %>% 
-    filter(last_fire == "2007") %>% 
+    filter(environ_cluster == "1")  %>% 
+         pull(environ_cluster)
+       ) # n = 17
+
+length(
+  boxdf %>%  
+    filter(environ_cluster == "2") %>% 
+         pull(environ_cluster)
+       ) # n = 13
+length(
+  boxdf %>%  
+    filter(environ_cluster == "3") %>% 
          pull(environ_cluster)
        ) # n = 9
-
-# Group 2 at higher elevation, less shady, less negative TWI, lower lat, more negative long, two fires. 21 transects in Group 2 burned in 2003 and 2007. Most transects are from Site 2. 4 transects are not from Site 2: INT1, INT2, INT4, 1.10. Only 3 burned in 2007 only (INT1, INT2, 1.10) (n = 25 transects) INT4 burned twice.
-
-length(
-  boxdf %>%  
-    filter(environ_cluster == "1") %>% 
-         pull(environ_cluster)
-       ) # Group 1: n = 27; Group 2: n = 12
-
-# southwestness, slope was the same between Group 1 and Group 2
-
-# I'm guessing elevation, shade, twi are big environmental factors as is fire history. I'm guessing lat and long are less predictive and more a result of our site locations.
-
-
-########################################## hillshade
-hist(boxdf$hillshade)
-shapiro.test(boxdf$hillshade) # normally distributed
-
-summary(aov((hillshade ~ environ_cluster), data = boxdf))
-#                Df Sum Sq Mean Sq F value Pr(>F)  
-# environ_cluster  1   1450  1450.1   4.249 0.0463 *
-# Residuals       37  12627   341.3                      
-
-TukeyHSD(aov(hillshade ~ environ_cluster, boxdf), conf.level=.95) 
-# $environ_cluster
-#         diff       lwr      upr     p adj
-# 2-1 12.71143 0.2168144 25.20604 0.0463482 <- sig
-
-boxplot(hillshade ~ environ_cluster, boxdf)
-
 
 
 ########################################## southwestness
 hist(boxdf$southwestness)
 shapiro.test(boxdf$southwestness) # <- not normal
 
-kruskal.test(southwestness ~ environ_cluster, data = boxdf) # p-value = 0.6818
+kruskal.test(southwestness ~ environ_cluster, data = boxdf) # p-value = 0.7918
 
 pairwise.wilcox.test(boxdf$southwestness, boxdf$environ_cluster, p.adjust.method = "BH")
 boxplot(southwestness ~ environ_cluster, boxdf)
-
+# no sig diffs
 
 ########################################## twi
 hist(boxdf$twi)
 shapiro.test(boxdf$twi) # 0.033 <- not normal
 
 kruskal.test(twi ~ environ_cluster, data = boxdf) 
-# Kruskal-Wallis chi-squared = 4.57, df = 1, p-value = 0.03254
-pairwise.wilcox.test(boxdf$twi, boxdf$environ_cluster, p.adjust.method = "BH")
+# Kruskal-Wallis chi-squared = 4.57, df = 1, p-value = 0.7641
+pairwise.wilcox.test(boxdf$twi, boxdf$environ_cluster, p.adjust.method = "BH") # no sig diffs
 
 boxplot(twi ~ environ_cluster, boxdf)
 
@@ -1017,34 +1003,15 @@ boxplot(twi ~ environ_cluster, boxdf)
 hist(boxdf$slope)
 shapiro.test(boxdf$slope) # <- normal
 
-summary(aov(slope ~ environ_cluster, boxdf))
-TukeyHSD(aov(slope ~ environ_cluster, boxdf), conf.level = .95) # not sig diff
+summary(aov(slope ~ environ_cluster, boxdf)) # p = 0.167, not sig diff
+TukeyHSD(aov(slope ~ environ_cluster, boxdf), conf.level = .95) 
 # $environ_cluster
-#          diff       lwr      upr     p adj
-# 2-1 -3.707741 -8.831239 1.415758 0.1510141
+#          diff        lwr       upr     p adj
+# 2-1 -4.163725 -10.932312  2.604862 0.3012302
+# 3-1  1.704033  -5.869081  9.277146 0.8471351
+# 3-2  5.867757  -2.098456 13.833970 0.1838509
 
 boxplot(slope ~ environ_cluster, boxdf)
-
-########################################## lat
-hist(boxdf$lat)
-shapiro.test(boxdf$lat) # not normal
-
-kruskal.test(lat ~ environ_cluster, data = boxdf) 
-# Kruskal-Wallis chi-squared = 13.181, df = 1, p-value = 0.0002828
-pairwise.wilcox.test(boxdf$lat, boxdf$environ_cluster, p.adjust.method = "BH")
-
-boxplot(lat ~ environ_cluster, boxdf)
-
-########################################## long
-hist(boxdf$long)
-shapiro.test(boxdf$long) # not normal
-
-kruskal.test(long ~ environ_cluster, data = boxdf) 
-pairwise.wilcox.test(boxdf$long, boxdf$environ_cluster, p.adjust.method = "BH")
-#  1     
-# 2 0.0022
-
-boxplot(long ~ environ_cluster, boxdf)
 
 ########################################## fire_event_count
 hist(boxdf$fire_event_count)
@@ -1058,18 +1025,79 @@ pairwise.wilcox.test(boxdf$fire_event_count, boxdf$environ_cluster, p.adjust.met
 boxplot(fire_event_count ~ environ_cluster, boxdf)
 
 
+########################################## total_sol_rad
+hist(boxdf$fire_event_count)
+shapiro.test(boxdf$fire_event_count) # not normal
 
-########################################## elevation
-
-hist(boxdf$elevation)
-shapiro.test(boxdf$elevation) # not normal
-
-kruskal.test(elevation ~ environ_cluster, data = boxdf)
-pairwise.wilcox.test(boxdf$elevation, boxdf$environ_cluster, p.adjust.method = "BH")
+kruskal.test(fire_event_count ~ environ_cluster, data = boxdf) 
+pairwise.wilcox.test(boxdf$fire_event_count, boxdf$environ_cluster, p.adjust.method = "BH")
 #   1      
-# 2 3.2e-07
+# 2 1.7e-07
 
-boxplot(elevation ~ environ_cluster, boxdf)
+boxplot(fire_event_count ~ environ_cluster, boxdf)
+
+
+
+
+
+############################### Environ variables by environ cluster
+
+Env_means <- boxdf %>% 
+   dplyr::select(c("site_rep", "plant_cluster", "environ_cluster",
+                   "slope", "southwestness", "twi", "fire_event_count", 
+                   "total_solrad")) %>%
+  group_by(environ_cluster) %>% 
+  mutate(environ_cluster = factor(environ_cluster, levels = c(1, 2, 3 ))) %>%  # Reorder
+  
+  summarize(
+    slope = paste0(round(mean(slope), 2), " ± ", round(sd(slope), 2)), # MEAN becuase normally distributed
+    southwestness = paste0(round(median(southwestness), 2), " ± ", round(sd(southwestness), 2)),
+    fire_events = paste0(round(median(fire_event_count), 2), " ± ", round(sd(fire_event_count), 2)),
+    twi = paste0(round(median(twi), 2), " ± ", round(sd(twi), 2)),
+   total_solrad = paste0(comma(round(median(total_solrad), 0)), " ± ", comma(round(sd(total_solrad), 0)))
+  )
+
+
+# Print as a gt table
+table_environ <- Env_means %>%
+  # Rename environ_cluster values before passing to gt
+  mutate(environ_cluster = recode(environ_cluster, 
+                                `1` = "Steep, sunny", 
+                                `2` = "Flat, sunny", 
+                                `3` = "Steep, shady, dry")) %>%
+  gt() %>%
+  tab_header(
+    title = "Summary of Environmental Variables by Environmental Cluster"
+    #,
+    #subtitle = "words here"
+  ) %>%
+   tab_footnote(
+    footnote = "Means and standard deviations reported for normally distributed variables.", 
+    locations = cells_column_labels(columns = slope)
+  ) %>% 
+   tab_footnote(
+    footnote = "Medians and standard deviations reported for non-normally distributed variables.", 
+    locations = cells_column_labels(c(columns = southwestness, twi, fire_events, total_solrad))
+  ) %>% 
+  
+  # Rename the column headers
+  cols_label(
+    environ_cluster = "Environmental Group",        # Rename "plant_cluster" column
+    slope = "Slope (%)",                    # Rename "slope" column
+    southwestness = "Southwestness",        # Rename "southwestness" column
+    twi = "TWI",       # Rename "tpi" column
+    fire_events = "Fire Count",        # Rename "fire_events" column
+    total_solrad = "Total solar radiation"
+  ) %>%
+  cols_align(
+    align = "center", # Center alignment
+    columns = "environ_cluster" # Specify the "cluster" column
+  ) %>% 
+  tab_options(
+    table.width = pct(100) # Make the table width 100%
+  ) 
+
+table_environ
 
 ```
 
