--- a/2_environ_NMDS.Rmd
+++ b/2_environ_NMDS.Rmd
@@ -111,6 +111,42 @@ extracted$site_rep <- gsub("\\.", "_", extracted$site_rep)
 #   dplyr::select(site_rep, plant_cluster)
 
  
+####################### load Species Percent Cover data 
+### copied/pasted from 1.3_NMDS_percentcover.Rmd; ~ line 100
+abcover_charateristics_load <- read.csv("processed/ab_specieslistwithcharateristics_08102024.csv", header = TRUE, na.strings=c("","NA")) %>% 
+  select(!c(X)) 
+
+sale_load <- abcover_charateristics_load %>% 
+  filter(species == c("Salvia leucophylla", "Salvia leucophylla dead")) %>% 
+  mutate(species = case_when(
+    species == "Salvia leucophylla dead" ~ "Salvia leucophylla", 
+    TRUE ~ species)) %>% 
+   mutate(site_rep = case_when(site_rep == "1_1" ~ "1_01", # old name ~ new name
+                        site_rep == "1_2" ~ "1_02",
+                        site_rep == "1_3" ~ "1_03",
+                        site_rep == "1_4" ~ "1_04",
+                        site_rep == "1_5" ~ "1_05",
+                        site_rep == "1_6" ~ "1_06",
+                        site_rep == "1_7" ~ "1_07",
+                        site_rep == "1_8" ~ "1_08",
+                        site_rep == "1_9" ~ "1_09",
+                        site_rep == "2_1" ~ "2_01",
+                         site_rep == "2_2" ~ "2_02", 
+                         site_rep == "2_3" ~ "2_03",
+                         site_rep == "2_4" ~ "2_04",
+                         site_rep == "2_5" ~ "2_05",
+                         site_rep == "2_6" ~ "2_06",
+                         site_rep == "2_7" ~ "2_07",
+                         site_rep == "2_8" ~ "2_08",
+                         site_rep == "2_9" ~ "2_09",
+   TRUE ~ site_rep)) %>% 
+   group_by(site_rep) %>% 
+  dplyr::summarize(
+    SALE_count_per_transect = sum(n_distinct(site_rep_dist)), 
+    percentcover = (SALE_count_per_transect/41) *100
+    ) %>% 
+  dplyr::select(!c(SALE_count_per_transect)) 
+  
 ```
 
 
@@ -1215,8 +1251,58 @@ table_environ_statsmeans
 
 
 
+# Fig. Salvia cover x Total Solar Radiation
+
+```{r}
+
+# total_solar_rad by transect (n = 39)
+SALExTSR <- boxdf %>% 
+  dplyr::select(c(site, site_rep, total_solrad, plant_cluster, environ_cluster)) %>% 
+  left_join(sale_load, by = "site_rep") %>% 
+  mutate_all(~replace(., is.na(.), 0)) # 1_03 does not have gps coordinates
+
+head(SALExTSR)
+
+fig_SALExTSR_zeros <- ggplot(SALExTSR,
+          aes(x = total_solrad,
+           y = percentcover
+         #  shape = plant_cluster,   # Shape by lifeform
+         #  color = plant_cluster   # Color by lifecycle
+           )) +
+  geom_point(size = 3, position = position_dodge(width = 0.0)) +  # Mean points
+ # labs(x = "Total Solar Radiation",
+  #     y = "Salvia leucophylla Percent Cover (%)",
+   #    shape = "Plant Cluster", # Label for color legend
+    #   color = "Plant Cluster"
+     #  ) +  # Label for shape legend
+  theme_bw() +
+  ylim(0, 100) +
+  xlim(9000, 31000) +
+   geom_smooth(method = "lm", se = TRUE, linetype = "solid", show.legend = TRUE)
+
+fig_SALExTSR_omitzeros <- ggplot(SALExTSR 
+                       %>%  filter(percentcover >0), 
+          aes(x = total_solrad,
+           y = percentcover
+         #  shape = plant_cluster,   # Shape by lifeform
+         #  color = plant_cluster   # Color by lifecycle
+           )) +
+  geom_point(size = 3, position = position_dodge(width = 0.0)) +  # Mean points
+ # labs(x = "Total Solar Radiation",
+  #     y = "Salvia leucophylla Percent Cover (%)",
+   #    shape = "Plant Cluster", # Label for color legend
+    #   color = "Plant Cluster"
+     #  ) +  # Label for shape legend
+  theme_bw() +
+  ylim(0, 100) +
+   xlim(9000, 31000) +
+   geom_smooth(method = "lm", se = TRUE, linetype = "solid", show.legend = TRUE)
 
 
+fig_SALExTSR_zeros
+
+fig_SALExTSR_omitzeros
+```
 
 
 
